styles/components_styles/carousel.module.css
.carousel {
    overflow: hidden;
    height: 40vh;
    background-color: #140E3A;
    width: 100vw;
}

.inner {
    white-space: nowrap;
    transition: transform 0.3s;
}

.carousel_item {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    min-height: 40vh;
    /* color: #fff; */
    transition: opacity 0.8s;
    /* border: none;
    border-color: white; */
}

.carousel_tile {
    background-color: #292A47;
    min-height: 34vh;
    width: 43vw;
    border-radius: 40px;
    color: white; 
    text-align: center;
    /* border: solid;
    border-color: red; */
}

.carousel_tile_title {
    margin-top: 30px;
    font-size: larger;
    font-weight: bold;
}

.carousel_tile_body {
    white-space: normal;
    margin: 20px;
    margin-top: 40px;
}

.col {
    border: none;
    border-color: red;
    min-height: 40vh;
}

.row {
    position: absolute;
    z-index: 1;
    width: 100vw;
    padding: 0%; 
    margin:0;
}

.indicators {
    display: flex; 
    justify-content: center;
}

/* .indicators > Button {
    margin: 5px; 
} */

@media (max-width: 767px) {
    .carousel_tile_title {
        font-size: 3vw;
        font-weight: bold;
    }
    
    .carousel_tile_body {
        font-size: 2.5vw;
    }

  }

